# GSL_RK45_GPU

./: .gitignore  CMakeLists.txt  build_cluster_ktt5121.sh  build_cluster_ktt5121.sh.bak  build_wsl.sh  gen_y.py  test_cuda.pbs  vndat.csv
bench/: .~lock.cpu-vs-gpu.xlsx#  cpu-vs-gpu.xlsx  output_128_10.txt  output_16_10.txt  output_256_10.txt  output_32_10.txt  output_64_10.txt
src/: cpu_functions.cpp  cpu_functions.h  cpu_parameters.cpp  cpu_parameters.h  cpu_rk45.cpp  cpu_rk45.h  flu_cpu_prms.cpp  flu_cpu_prms.h  flu_default_params.h  flu_func.cpp  flu_gpu_prms.cpp  flu_gpu_prms.h  flu_readdata.cpp  flu_readdata.h  gpu_functions.h  gpu_parameters.cpp  gpu_parameters.h  gsl_functions.cpp  main.cpp
src/cpu/: cpu_functions.cpp  cpu_functions.h  gsl_functions.cpp
src/csv/: csv_data.cpp  csv_data.h
src/cuda/: flu_gpu_func.cu  gpu_func_flu.cu  gpu_func_pen.cu  gpu_func_test.cu  gpu_functions.cu  gpu_functions.h  gpu_functions_2.cu  gpu_reduce.cu  gpu_rk45.cu  gpu_rk45.h  gpu_rk45_global_kernels.cu  gpu_rk45_global_kernels.h  gpu_rk45_step_apply.cu  gpu_sample.cu
src/gpu/: flu_parameters.cu  flu_parameters.cuh  gpu_flu.cu  gpu_flu.cuh  gpu_flu_stream.cu  gpu_flu_stream.cuh  gpu_func_flu.cu  gpu_func_test.cu  gpu_mcmc.cu  gpu_mcmc.cuh  gpu_ode.cu  gpu_ode.cuh  gpu_ode_mcmc.cu  gpu_ode_mcmc.h  gpu_ode_stream.cu  gpu_ode_stream.cuh  gpu_parameters.cpp  gpu_parameters.cu  gpu_parameters.cuh  gpu_parameters.h  gpu_reduce.cu  gpu_reduce.cuh  gpu_rk45.cu  gpu_rk45.h
src/gpu/stream/: gpu_flu_stream.cu  gpu_flu_stream.cuh  gpu_ode_stream.cu  gpu_ode_stream.cuh
src/mcmc/: mcmc.cpp  mcmc.h
